--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -147,7 +147,7 @@
           <p class="catalog-text">€380</p>
         </div>
       </li>
-      <li class="catalog-items mob-version">
+      <li class="catalog-items mob">
         <picture>
           <source
             srcset="
@@ -176,7 +176,7 @@
           <p class="catalog-text">€400</p>
         </div>
       </li>
-      <li class="catalog-items mob-version">
+      <li class="catalog-items mob">
         <picture>
           <source
             srcset="
