--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -5,19 +5,16 @@
 }
   
   .catalog-title {
-    font-family: var(--font-family);
+    font-family: "Gilroy", sans-serif;
     font-weight: 600;
     font-size: 32px;
     line-height: 100%;
     letter-spacing: -0.02em;
-    color: var(--main);
-    color: #2e2f42;
+    color: #0C0C0C;
     margin-bottom: 24px;
   }
 
-.catalog.lict:last-child{
-    margin-bottom: 0;
-  } 
+
   
   
   .catalog-items {
@@ -26,12 +23,17 @@
     padding:24px 28px;
     max-width: 335px;
     background-color:#F3F3F3 ;
-    margin-bottom: 10px;
+    
   }
-  
-  
 
-   .mob-version {
+  .catalog-items:not(:first-child){
+    margin-top:10px;
+  }
+
+
+
+
+   .mob {
     display: none;
   }
 
@@ -45,7 +47,7 @@
   
   
   .catalog-subtitle {
-    font-family: var(--font-family);
+    font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 125%;
@@ -54,7 +56,7 @@
     margin-bottom: 8px;
   }
   .catalog-text {
-    font-family: var(--font-family);
+    font-family: "Gilroy", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 129%;
@@ -65,7 +67,7 @@
   
   .catalog-button 
      {
-      font-family: var(--font-family);
+      font-family: "Gilroy", sans-serif;
       font-weight: 500;
       font-size: 14px;
       line-height: 129%;
@@ -112,18 +114,21 @@
       .catalog-list {
         display: flex;
         flex-wrap: wrap;
-        column-gap:16px;
-        row-gap: 32px;
+        gap: 32px 16px;
       }
 
 
      .catalog-items{ 
-      margin-bottom: 0;
       padding: 24px 32px;
-      max-width: 344px;
+      min-width: 344px;
     }
   
-    .mob-version {
+     .catalog-items:not(:first-child){
+      margin-top: 0;
+     }
+
+
+    .mob{
         display: block;
       }
   
@@ -146,8 +151,9 @@
             min-width: 304px;
             }
 
-          .catalog-list {
-           
+        .catalog-list {
+          justify-content: space-between;
+          gap: 32px 23px;
           }
 
         .catalog-items{ 
