--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,7 @@
       </ul>
     </div>
     <div class="footer-phone">
-      <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+      <a href="tel:+380684439426" class="footer-tel">+380 (68) 443-94-26</a>
     </div>
     <div class="footer-slogan">
       <p class="footer-slogan-text">
@@ -19,25 +19,29 @@
         craftsmanship meets impeccable design
       </p>
     </div>
-    <div class="footer-menu">
-      <ul class="footer-menu-list">
-        <li class="footer-menu-item"><a href="">Home</a></li>
-        <li class="footer-menu-item"><a href="">About Us</a></li>
-        <li class="footer-menu-item"><a href="">Catalog</a></li>
-        <li class="footer-menu-item"><a href="">Sale</a></li>
-        <li class="footer-menu-item"><a href="">Reviews</a></li>
-        <li class="footer-menu-item"><a href="">Contact Us</a></li>
-      </ul>
-    </div>
-    <div class="footer-address">
-      <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
+    <div class="footer-menu-address">
+      <div class="footer-menu">
+        <ul class="footer-menu-list">
+          <li class="footer-menu-item"><a href="">Home</a></li>
+          <li class="footer-menu-item"><a href="">About Us</a></li>
+          <li class="footer-menu-item"><a href="">Catalog</a></li>
+          <li class="footer-menu-item"><a href="">Sale</a></li>
+          <li class="footer-menu-item"><a href="">Reviews</a></li>
+          <li class="footer-menu-item"><a href="">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="footer-address">
+        <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
+      </div>
     </div>
     <div class="footer-text">
-      <p>&copy;2023 The Watch Spot. All rights reserved.</p>
+      <p class="footer-text-item">
+        &copy;2023 The Watch Spot. All rights reserved.
+      </p>
     </div>
     <div class="footer-link">
-      <a href="">Terms of Service</a>
-      <a href="">Privacy Policy</a>
+      <a href="" class="footer-link-text">Terms of Service</a>
+      <a href="" class="footer-link-text">Privacy Policy</a>
     </div>
   </div>
 </footer>
