--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../fonts/Gilroy-Medium.ttf');
+  font-weight: 500;
+  font-style: normal;
+}
+
 
 .catalog {
     padding-top:60;
