--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,10 @@
 /* Reset styles */
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/stylesheet.css);
+  font-style: normal;
+}
+
 body {
   font-family: 'Gilroy', sans-serif;
   background-color: #fbfbfb;
