--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
@@ -10,4 +10,132 @@
       </li>
     </ul>
   </nav>
+</header> -->
+<!-------------------- HEADER--------------------------------->
+<header class="page-header">
+  <div class="container page-header-container">
+    <nav class="page-nav">
+      <a class="header-logo" href="./index.html">watchcharm</a>
+      <ul class="menu-list">
+        <li class="menu-list-item">
+          <a class="menu-link current">Home</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="about-us">About Us</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="catalog">Catalog</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="sale">Sale</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="reviews">Reviews</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header-social-list">
+      <li class="header-social-list-item">
+        <a
+          class="header-social-list-link"
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+        >
+          <svg class="social-list-icon" width="20px" height="20px">
+            <use href="../public/favicon.svg#icon-Frame-52"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-social-list-item">
+        <a
+          class="header-social-list-link"
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+        >
+          <svg class="social-list-icon" width="20px" height="20px">
+            <use href="../public/favicon.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-social-list-item">
+        <a
+          class="header-social-list-link"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+        >
+          <svg class="social-list-icon" width="20px" height="20px">
+            <use href="../public/favicon.svg#icon-Frame-60"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <!-- <button class="menu-open-btn" type="button">
+      <svg class="menu-open-btn-icon" width="34" height="34">
+        <use href=""></use>
+      </svg>
+    </button> -->
+  </div>
 </header>
+<!----------------------------THE END HEADER------------------------------------------------->
+
+<!----------------------------MOBILE MENU--------------------------------------------->
+<!-- <section class="section-mobile-menu">
+  <div class="container mobile-menu">
+    <buttton class="mobile-menu-close-btn">
+      <svg class="mobile-menu-close-icon" width="34" height="34">
+        <use href=""></use>
+      </svg>
+    </buttton>
+
+    <nav class="mobile-page-nav-menu">
+      <ul class="mobile-nav-menu">
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link current" href="#">Home</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="about-us">About Us</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="catalog">Catalog</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="sale">Sale</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="reviews">Reviews</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="mobile-socialmedia-list">
+      <li class="mobile-socialmedia-list-item">
+        <a href="#" class="mobile-socialmedia-list-link">
+          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+            <use href="../img/"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="mobile-socialmedia-list-item">
+        <a href="#" class="mobile-socialmedia-list-link">
+          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+            <use href=""></use>
+          </svg>
+        </a>
+      </li>
+      <li class="mobile-socialmedia-list-item">
+        <a href="#" class="mobile-socialmedia-list-link">
+          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+            <use href=""></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</section> -->
+
+<!----------------------THE END MOBILE MENU----------------------------->
