add-span-in-mob-subtitle

--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -128,10 +128,18 @@
      }
 
 
+     .catalog-subtitle span {
+      display: none;
+    }
+
+
     .mob{
         display: block;
       }
   
+      
+
+
       .catalog-button {
         display: none;
       }
