--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -34,7 +34,9 @@
         </picture>
 
         <div class="catalog-box">
-          <h3 class="catalog-subtitle">Garmin Fenix 7X Pro Sapphire...<span >Solar</span> </h3>
+          <h3 class="catalog-subtitle hidden-text">
+            Garmin Fenix 7X Pro Sapphire Solar
+          </h3>
           <p class="catalog-text">€500</p>
         </div>
       </li>
@@ -201,8 +203,8 @@
         </picture>
 
         <div class="catalog-box">
-          <h3 class="catalog-subtitle">
-            OTube Watch S42 Date Steel W...<span>ith Black Case</span> 
+          <h3 class="catalog-subtitle hidden-text">
+            Tube Watch S42 Date Steel With Black Case
           </h3>
           <p class="catalog-text">€395</p>
         </div>
