--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="conteiner">
+  <div class="footer-container">
     <div class="footer-logo">
       <a href="watchcharm" class="footer-logo-text">watchcharm</a>
     </div>
