--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,9 +1,9 @@
 /* Reset styles */
-@font-face {
+/* @font-face {
   font-family: 'Gilroy';
-  src: url(../fonts/stylesheet.css);
+  src: url('../fonts/stylesheet.css');
   font-style: normal;
-}
+} */
 
 body {
   font-family: 'Gilroy', sans-serif;
