--- a/src/css/header.css
+++ b/src/css/header.css
@@ -45,16 +45,40 @@ button {
 
 
 /* **********HEADER*****************/
+
+.container {
+    max-width: 375px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container{
+        max-width: 768px;
+        padding: 0 32px;
+        
+    }
+    
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+
+        max-width: 1280px;
+        padding: 0 65px;
+    }
+
+}
+
+
 .page-header {
     padding: 26px 0;
     border-bottom: 1px solid rgba(12, 12, 12, .1);
 }
 
-.container {
-    margin: 0 auto;
-    max-width: 1280px;
-    padding: 0 65px;
-}
+
+
+
 
 .page-header-container {
     display: flex;
@@ -68,21 +92,59 @@ button {
     align-items: center;
 }
 
-.header-logo {
-    margin-right: 203px;
-    font-family: "Gilroy", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    letter-spacing: -0.02em;
-    color: #0c0c0c;
+.header-logo{
+
+        font-family: "Gilroy", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: -0.02em;
+        color: #0c0c0c;
 
 }
+
+@media screen and (min-width: 768px) {
+    .header-logo {
+            font-size: 20px;
+        }
+
+}
+
+
+
+@media screen and (min-width: 1280px) {
+
+.header-logo {
+        margin-right: 203px;
+        }
+
+}
+
 
 .menu-list {
-    display: flex;
-    gap: 40px;
+    display: none;
+}
+
+
+
+
+@media screen and (min-width: 1280px) {
+
+        .menu-list {
+                display: flex;
+        
+                gap: 40px;
+        
+            }
+
+            .menu-open-btn{
+                display: none;
+            }
+
+
+
 
 }
+
 
 .current {
     position: relative;
@@ -112,12 +174,30 @@ button {
     color: #0c0c0c;
 
 }
+
 .header-social-list{
-    display: flex;
+    display: none;
+}
+
+@media screen and (min-width: 1280px) {
+
+    .header-social-list {
+            display: flex;
+            
+        }
+
+                
+
+
+}
+
+
+.header-social-list{
+   
     justify-content: center;
     align-items: center;
     gap: 10px;
-}
+}  
 
 .header-social-list-link{
     display: flex;
@@ -138,5 +218,123 @@ button {
 
 }
 
+
+
+/********************** Burger button **********/
+
+.menu-open-btn {
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    line-height: 0;
+    border: none;
+
+
+}
+
+.menu-open-btn-icon {
+    stroke: #0c0c0c;
+}
+
+@media screen and ( min-width: 768px){
+
+    .menu-open-btn-icon{
+        width: 40px;
+        height: 40px;
+    }
+
+    
+}
+
+
+
+
+
+
+/************************************************/
+
 /**********************************MOBILE MENU**************************************/
+
+.mobile-menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(12, 12, 12, 0.92);
+
+}
+
+.mobile-menu-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+     /* max-width: 320px;  */
+    padding: 20px 20px 40px 20px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.mobile-menu-close-btn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    line-height: 0;
+    border: none;
+    padding: 0;
+    stroke: #ffffff;
+    width: 17px;
+    height: 17px;
+    cursor: pointer;
+}
+
+
+.mobile-page-nav-menu{
+    /* margin-top: auto; */
+    margin-bottom: auto;
+}
+.mobile-nav-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.mobile-nav-link {
+    font-family: "Gilroy", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+}
+
+.mobile-socialmedia-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 40px;
+}
+
+.mobile-socialmedia-list-link {
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        fill:#FBFBFB;
+        border: 1px solid rgba(251, 251, 251, 0.1);
+        padding: 8px;
+        width: 34px;
+        height: 34px;
+
+}
+
 
