--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,2 +1,143 @@
+<!-------------------- HEADER--------------------------------->
+<header class="page-header">
+  <div class="container page-header-container">
+    <nav class="page-nav">
+      <a class="header-logo" href="./index.html">watchcharm</a>
+      <ul class="menu-list">
+        <li class="menu-list-item">
+          <a class="menu-link current">Home</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="about-us">About Us</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="catalog">Catalog</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="sale">Sale</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="reviews">Reviews</a>
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link" href="contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header-social-list">
+      <li class="header-social-list-item">
+        <a
+          class="header-social-list-link"
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+        >
+          <svg class="social-list-icon" width="20px" height="20px">
+            <use href="../img/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-social-list-item">
+        <a
+          class="header-social-list-link"
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+        >
+          <svg class="social-list-icon" width="20px" height="20px">
+            <use href="../img/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-social-list-item">
+        <a
+          class="header-social-list-link"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+        >
+          <svg class="social-list-icon" width="20px" height="20px">
+            <use href="../img/icons.svg#icon-Frame-60"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <button class="menu-open-btn" type="button">
+      <svg class="menu-open-btn-icon" width="34" height="34">
+        <use href="../img/icons.svg#icon-burger-btn"></use>
+      </svg>
+    </button>
+  </div>
+</header>
+<!----------------------------THE END HEADER------------------------------------------------->
 
-      
+<!----------------------------MOBILE MENU--------------------------------------------->
+<div class="mobile-menu">
+  <div class="container mobile-menu-container">
+    <buttton class="mobile-menu-close-btn" type="button">
+      <svg class="mobile-menu-close-icon" width="34" height="34">
+        <use href="../img/icons.svg#icon-btn-close-modal"></use>
+      </svg>
+    </buttton>
+
+    <nav class="mobile-page-nav-menu">
+      <ul class="mobile-nav-menu">
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link current" href="#">Home</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="about-us">About Us</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="catalog">Catalog</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="sale">Sale</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="reviews">Reviews</a>
+        </li>
+        <li class="mobile-nav-menu-item">
+          <a class="mobile-nav-link" href="contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="mobile-socialmedia-list">
+      <li class="mobile-socialmedia-list-item">
+        <a
+          href="#"
+          class="mobile-socialmedia-list-link"
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+        >
+          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+            <use href="../img/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="mobile-socialmedia-list-item">
+        <a
+          href="#"
+          class="mobile-socialmedia-list-link"
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+        >
+          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+            <use href="../img/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="mobile-socialmedia-list-item">
+        <a
+          href="#"
+          class="mobile-socialmedia-list-link"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+        >
+          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+            <use href="../img/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!----------------------THE END MOBILE MENU----------------------------->
