--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -1,5 +1,5 @@
 .section-advertisement {
-  padding-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .advertisement-wrap {
@@ -10,7 +10,7 @@
   background-size: cover;
   padding: 60px 28px 60px 28px;
   border-radius: 30px;
-
+  /* box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25); */
   filter: blur(4);
 }
 
@@ -66,7 +66,7 @@
 .adv-btn {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.29;
+  line-height: 1.28571;
   text-align: center;
   color: #fbfbfb;
   border: 1px solid rgba(251, 251, 251, 0.15);
@@ -74,44 +74,4 @@
   width: 160px;
   height: 48px;
   background-color: transparent;
-}
-
-@media screen and (max-width: 767px) {
-  .advertisement-wrap {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .section-advertisement {
-    padding-bottom: 80px;
-  }
-
-  .advertisement-wrap {
-    padding: 80px 64px 80px 64px;
-  }
-
-  .text-adv {
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 0.92;
-    margin-bottom: 32px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .section-advertisement {
-    padding-bottom: 100px;
-  }
-
-  .advertisement-wrap {
-    display: flex;
-    padding: 83px 80px 83px 80px;
-    gap: 140px;
-  }
-
-  .text-adv {
-    width: 690px;
-    margin-bottom: 0;
-  }
 }
