--- a/src/css/header.css
+++ b/src/css/header.css
@@ -294,16 +294,17 @@ button {
 
 
 .mobile-page-nav-menu{
-    /* margin-top: auto; */
+    margin-top: auto;
     margin-bottom: auto;
 }
+
 .mobile-nav-menu{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 24px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    /* margin-top: 50px;
+    margin-bottom: 50px; */
 }
 
 .mobile-nav-link {
