--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -24,7 +24,7 @@ margin-bottom: 28px;
 }
 .form-container {
     padding: 48px 28px;
-    width: 335px;
+    width: 100%;
     border-radius: 30px;
     background-color: #f3f3f3;
 }
@@ -81,7 +81,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin: 0;
 }
 .image-container {
-    width: 335px;
+    width: 100%;
     border-radius: 30px;
     overflow: hidden;
 }
@@ -104,7 +104,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         gap: 40px;
     }
     .form-container {
-        width: 704px;
         border-radius: 50px;
         padding: 50px 122px;
     }
@@ -118,7 +117,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         min-height: 90px;
     }
     .image-container {
-        width: 704px;
         border-radius: 50px;
     }
 
@@ -132,10 +130,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         flex-direction: row;
     }
     .form-container {
-        width: 580px;
         padding: 50px 60px;
-    }
-    .image-container {
-        width: 580px;
     }
 }
