--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,6 +1,6 @@
 
 .catalog {
-    padding-top:60;
+    padding-top:  60px;
     padding-bottom: 60px;
 }
   
@@ -14,15 +14,18 @@
     margin-bottom: 24px;
   }
 
-
+  .catalog-list {
+  display: flex;
+  flex-wrap: wrap;
+}
   
   
   .catalog-items {
+    background-color:#F3F3F3 ;
     border: 1px solid rgba(12, 12, 12, 0.05);
     border-radius: 30px;
     padding:24px 28px;
-    max-width: 335px;
-    background-color:#F3F3F3 ;
+   
   }
 
   .catalog-items:not(:first-child){
@@ -35,14 +38,9 @@
   }
 
 
-
-
-  .catalog-img {
-    margin-bottom: 10px;
-
-  }
-  
-  
+ .catalog-box {
+  margin-top: 10px;
+ }
 
   
   .catalog-subtitle {
@@ -168,12 +166,13 @@
             }
 
         .catalog-list {
+          
           justify-content: space-between;
           gap: 32px 23px;
           }
 
         .catalog-items{ 
-          min-width: 368px;
+          width: 368px;
           }
 
   }
