--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,8 @@
 /* Reset styles */
+
+
+@import url(./stylesheet.css);
+
 body {
   font-family: 'Gilroy', sans-serif;
   background-color: #fbfbfb;
