--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -35,7 +35,7 @@
           </picture>
         </li>
         <li class="anchor">
-          <a class="anchor-btn">Scroll down</a>
+          <a class="anchor-btn" href="#footer">Scroll down</a>
         </li>
       </ul>
     </div>
