--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,4 +1,12 @@
+.hero{
+  padding-bottom: 60px;
+}
 
+.back{
+  width: 100%;
+  height: 200px;
+  background-color: #0C0C0C;
+}
 .hero-page {
   display: flex;
   flex-direction: column;
@@ -70,6 +78,9 @@
     max-width: 768px;
     padding: 0 32px;
   }
+  .hero{
+    padding-bottom: 80px;
+  }
 
   .hero-page {
     gap: 40px;
@@ -81,6 +92,7 @@
   }
 
   .text-blok{
+    align-items: start;
     margin-top: 0;
     max-width: 557px;
   }
@@ -101,6 +113,7 @@
     font-size: 16px;
     line-height: 125%;
     letter-spacing: -0.02em;
+    width: 480px;
   }
   
   .hero-section-team{
@@ -132,7 +145,9 @@
       max-width: 1280px;
       padding: 0 65px;
     }
-  
+    .hero{
+      padding-bottom: 100px;
+    }
     .text-blok{
       max-width: 597px;
     }
@@ -141,6 +156,8 @@
         line-height: 87%;
 
     }
+
+   
     .span-hero {
       font-size: 72px;
       line-height: 87%;
