classes conflict fix

--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -1,7 +1,7 @@
 <section class="contact-us">
     <div class="container contact-us">
     <h2 class="contact-us-title">Contact Us</h2>
-    <div class="flex-container">
+    <div class="contact-us-flex-container">
     <div class="form-container">
     <p class="contact-form-text">Please use the form below to contact us. Enter your name, email, phone, and message and we'll get back to you shortly.</p>
     <form class="contact-us-form" name="contact-us-form">
