--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -17,7 +17,7 @@ letter-spacing: -0.02em;
 color: rgba(12, 12, 12, 0.7);
 margin-bottom: 28px;
 }
-.flex-container {
+.contact-us-flex-container {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -100,7 +100,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         line-height: 1.25;
         margin-bottom: 32px;
     }
-    .flex-container {
+    .contact-us-flex-container {
         gap: 40px;
     }
     .form-container {
@@ -126,7 +126,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding-top: 50px;
         padding-bottom: 50px;
     }
-    .flex-container {
+    .contact-us-flex-container {
         flex-direction: row;
     }
     .form-container {
