--- a/src/css/header.css
+++ b/src/css/header.css
@@ -211,6 +211,7 @@ button {
     fill: #0c0c0c;
 }
 
+
 .header-social-list-link:hover,
 .header-social-list-link:focus {
     fill: #3350E9;
@@ -264,6 +265,15 @@ button {
     height: 100%;
     background-color: rgba(12, 12, 12, 0.92);
 
+    opacity: 0;
+    visibility: hidden;
+    transition: transition background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
 }
 
 .mobile-menu-container{
