--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -23,22 +23,22 @@
           <source
             media="(max-width: 767px)"
             srcset="
-              ./img-about/mobil-img-about.jpg    1x,
-              ./img-about/mobil-img-about-2x.jpg 2x
+              ../img-about/mobil-img-about.jpg    1x,
+              ../img-about/mobil-img-about-2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px) and (max-width: 1279px)"
             srcset="
-              ./img-about/plan-img-about.jpg    1x,
-              ./img-about/plan-img-about-2x.jpg 2x
+              ../img-about/plan-img-about.jpg    1x,
+              ../img-about/plan-img-about-2x.jpg 2x
             "
           />
           <source
             media="(min-width: 1280px)"
             srcset="
-              ./img-about/desk-img-about.jpg    1x,
-              ./img-about/desk-img-about-2x.jpg 2x
+              ../img-about/desk-img-about.jpg    1x,
+              ../img-about/desk-img-about-2x.jpg 2x
             "
           />
           <img
