--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,47 @@
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-logo">
-      <a href="watchcharm" class="footer-logo-text">watchcharm</a>
-    </div>
-    <div class="footer-social">
-      <ul class="footer-soc-list">
-        <li class="footer-soc-item"></li>
-        <li class="footer-soc-item"></li>
-        <li class="footer-soc-item"></li>
-      </ul>
-    </div>
-    <div class="footer-phone">
+<footer class="footer container" id="footer">
+  <div class="footer-cont">
+    <div class="footer-section">
+      <div class="footer-logo-soc">
+        <a href="watchcharm" class="footer-logo-text">watchcharm</a>
+        <ul class="footer-soc-list">
+          <li class="footer-soc-item">
+            <a
+              href="https://www.facebook.com/goITclub/"
+              target="_blank"
+              class="footer-soc-link"
+            >
+              <svg class="footer-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a
+              href="https://www.instagram.com/goitclub/"
+              target="_blank"
+              class="footer-soc-link"
+            >
+              <svg class="footer-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a
+              href="https://www.youtube.com/c/GoIT"
+              target="_blank"
+              class="footer-soc-link"
+            >
+              <svg class="footer-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
       <a href="tel:+380684439426" class="footer-tel">+380 (68) 443-94-26</a>
     </div>
+
     <div class="footer-slogan">
       <p class="footer-slogan-text">
         Have the time of your life with our watches: where high-class
@@ -38,10 +67,10 @@
       <p class="footer-text-item">
         &copy;2023 The Watch Spot. All rights reserved.
       </p>
-    </div>
-    <div class="footer-link">
-      <a href="" class="footer-link-text">Terms of Service</a>
-      <a href="" class="footer-link-text">Privacy Policy</a>
+      <div class="footer-link">
+        <a href="" class="footer-link-text">Terms of Service</a>
+        <a href="" class="footer-link-text">Privacy Policy</a>
+      </div>
     </div>
   </div>
 </footer>
