--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,7 +69,7 @@
 <!----------------------------THE END HEADER------------------------------------------------->
 
 <!----------------------------MOBILE MENU--------------------------------------------->
-<div class="mobile-menu is-open">
+<!-- <div class="mobile-menu is-open">
   <div class="container mobile-menu-container">
     <buttton class="mobile-menu-close-btn" type="button">
       <svg class="mobile-menu-close-icon" width="34" height="34">
@@ -138,6 +138,6 @@
       </li>
     </ul>
   </div>
-</div>
+</div> -->
 
 <!----------------------THE END MOBILE MENU----------------------------->
