скрыла мобильное меню

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -216,10 +216,10 @@ button {
 
 }
 
-.mobile-menu .is-open {
+/* .mobile-menu .is-open {
     opacity: 1;
     visibility: visible;
-}
+} */
 
 .mobile-menu-container{
     position: relative;
