--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -13,7 +13,7 @@
           />
           <source
             srcset="
-              ./img/catalog-img/tab-1x.png                   1x,
+              ./img/catalog-img/tab-1x.png/watch1-tab.png       1x,
               ./img/catalog-img/tab-2x.png/watch1-tab-2x.png 2x
             "
             media="(min-width:768px)"
