--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer container" id="footer">
   <div class="footer-cont">
+    <div class="footer-wrap">
     <div class="footer-section">
       <div class="footer-logo-soc">
         <a href="watchcharm" class="footer-logo-text">watchcharm</a>
@@ -39,7 +40,7 @@
           </li>
         </ul>
       </div>
-      <a href="tel:+380684439426" class="footer-tel">+380 (68) 443-94-26</a>
+      
     </div>
 
     <div class="footer-slogan">
@@ -48,6 +49,10 @@
         craftsmanship meets impeccable design
       </p>
     </div>
+      <a href="tel:+380684439426" class="footer-tel">+380 (68) 443-94-26</a>
+      
+    </div>
+    
     <div class="footer-menu-address">
       <div class="footer-menu">
         <ul class="footer-menu-list">
