add styles in css

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,51 +1,57 @@
 <section class="reviews" id="reviews">
-    <div class="reviews-content container">
-      <h2 class="reviews-title title">Reviews</h2>
-        <ul class="rev-list">
-          <li class="rev-item">
-            <img
-              class="team-member-photo"
-              src="./reviews/john-wax-portrait.png"
-              alt="john-wax-portrait"
-              width="56"
-              height="56"
-            />
-            <h3 class="rev-subtitle">John Wax</h3>
-            <p class="rev-text">
-              Buying a watch from was the best choice for me. The design is
-              perfectly combined with high quality materials. The strap fits
-              nicely on the hand, and the mechanism works flawlessly.
-            </p>
-          </li>
-          <li class="rev-item rev-item-second">
-            <img
-              class="team-member-photo"
-              src="./reviews/victoria-romashenko-portrait.png"
-              width="56"
-              height="56"
-            />
-            <h3 class="rev-subtitle">Victoria Romashenko</h3>
-            <p class="rev-text">
-              Can't take my eyes off my watch from. Every time I put it on, it is
-              admired by those around me. The build quality and attention to
-              detail make it a real gem among my accessories.
-            </p>
-          </li>
-          <li class="rev-item rev-item-third">
-            <img
-              class="team-member-photo"
-              src="./reviews/anastasia-trachuk-portrait.png"
-              alt="anastasia-trachuk-portrait"
-              width="56"
-              height="56"
-            />
-            <h3 class="rev-subtitle">Anastasia Trachuk</h3>
-            <p class="rev-text">
-              My watch from is a real masterpiece. Every detail impresses with the
-              high quality of execution. Special features like [specify features]
-              make it an indispensable companion in my daily life.
-            </p>
-          </li>
-        </ul>
-    </div>
-  </section>  
+  <div class="reviews-content container">
+    <h2 class="reviews-title title">Reviews</h2>
+    <ul class="rev-list">
+      <li class="rev-item">
+        <div class="rev-list-wrap">
+          <img
+            class="team-member-photo"
+            src="./img/reviews/john-wax-portrait.png"
+            alt="john-wax-portrait"
+            width="56"
+            height="56"
+          />
+          <h3 class="rev-subtitle">John Wax</h3>
+          <p class="rev-text">
+            Buying a watch from was the best choice for me. The design is
+            perfectly combined with high quality materials. The strap fits
+            nicely on the hand, and the mechanism works flawlessly.
+          </p>
+        </div>
+      </li>
+      <li class="rev-item rev-item-second">
+        <div class="rev-list-wrap">
+          <img
+            class="team-member-photo"
+            src="./img/reviews/victoria-romashenko-portrait.png"
+            width="56"
+            height="56"
+          />
+          <h3 class="rev-subtitle">Victoria Romashenko</h3>
+          <p class="rev-text">
+            Can't take my eyes off my watch from. Every time I put it on, it is
+            admired by those around me. The build quality and attention to
+            detail make it a real gem among my accessories.
+          </p>
+        </div>
+      </li>
+      <li class="rev-item rev-item-third">
+        <div class="rev-list-wrap">
+          <img
+            class="team-member-photo"
+            src="./img/reviews/anastasia-trachuk-portrait.png"
+            alt="anastasia-trachuk-portrait"
+            width="56"
+            height="56"
+          />
+          <h3 class="rev-subtitle">Anastasia Trachuk</h3>
+          <p class="rev-text">
+            My watch from is a real masterpiece. Every detail impresses with the
+            high quality of execution. Special features like [specify features]
+            make it an indispensable companion in my daily life.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
