--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,7 +2,7 @@
   <div class="reviews-content container">
     <h2 class="reviews-title title">Reviews</h2>
     <ul class="rev-list">
-      <li class="rev-item">
+      <li class="rev-item rev-item-first">
         <div class="rev-list-wrap">
           <img
             class="team-member-photo"
