--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -36,8 +36,6 @@
   gap: 10px;
   max-width: 122px;
 }
-.footer-soc-item {
-}
 
 .footer-soc-link {
   border: 1px solid rgba(251, 251, 251, 0.1);
@@ -92,13 +90,11 @@
   border-bottom: solid 1px rgba(251, 251, 251, 0.1);
 }
 
-.footer-menu {
-}
-
 .footer-menu-list {
   display: flex;
   flex-wrap: wrap;
   gap: 13px 16px;
+  width: 147px;
 }
 .footer-menu-item {
   font-weight: 500;
@@ -162,20 +158,21 @@
   .footer-logo-text {
     font-size: 20px;
   }
+  .footer-menu-list {
+    width: 400px;
+    gap: 19px;
+  }
+  .footer-menu-item {
+    font-size: 14px;
+    line-height: 1.29;
+  }
 .footer-wrap {
   flex-direction: row;
 }
-  /* .footer-section {
-    display: flex;
-    flex-direction: row;
-  } */
-
   .footer-logo-soc {
     display: flex;
     flex-direction: column;
     gap: 20px;
-  }
-  .footer-phone {
   }
 
   .footer-tel {
@@ -201,10 +198,6 @@
     margin-bottom: 28px;
     padding-bottom: 28px;
   }
-
-  .footer-menu {
-  }
-
   .footer-menu-list {
     width: 400px;
     flex-wrap: nowrap;
@@ -256,5 +249,9 @@
   }
   .footer-address {
     max-width: 162px;
+  }
+  .footer-menu-list {
+    width: 505px;
+    gap: 40px;
   }
 }
