--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -1,4 +1,4 @@
-<section class="contact-us">
+<section id="contact-us-section" class="contact-us">
     <div class="container contact-us">
     <h2 class="contact-us-title">Contact Us</h2>
     <div class="contact-us-flex-container">
