--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="about-us">
+<section class="about-us" id="about-us-section">
   <div class="container about">
     <div class="flex-container">
       <div class="content-about">
@@ -15,7 +15,7 @@
           personality and style. So why settle for anything less than the best?
         </p>
         <button class="about-button" type="button">
-          <a href="#catalog-section">View catalog</a>
+          <a href="#catalog">View catalog</a>
         </button>
       </div>
       <div class="image-about">
