--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -7,7 +7,7 @@
           Welcome to our premium watch collection, where luxury and style meet
           functionality and precision. Our selection of timepieces embodies the
           very best in Swiss craftsmanship and engineering, ensuring that you'll
-          always have a reliable and stylish accessory on your wrist.
+          always have a reliable and stylish accessory on your wrist....
         </p>
         <p class="about-text last-paragraph">
           At our premium watch collection, we believe that a watch is more than
