--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -13,11 +13,11 @@
   padding: 0 20px;
   margin: 0 auto;
 }
-/* .container {
-} */
+
 .reviews-title {
   margin-top: 60px;
 }
+
 .title {
   font-weight: 600;
   font-size: 32px;
@@ -32,8 +32,6 @@
   width: 100%;
 }
 
-.rev-list-wrap {
-}
 .rev-item {
   max-width: 335px;
   padding: 32px 36px;
@@ -42,6 +40,7 @@
   background-color: #f3f3f3;
   margin-bottom: 24px;
 }
+
 .team-member-photo {
   border-radius: 100%;
   outline-width: 2px;
@@ -49,8 +48,8 @@
   outline-style: solid;
 
   margin: 0px auto 24px;
-  /* margin-bottom: 24px; */
 }
+
 .rev-subtitle {
   font-weight: 500;
   font-size: 16px;
@@ -62,6 +61,7 @@
   text-align: center;
   margin-bottom: 8px;
 }
+
 .rev-text {
   font-weight: 500;
   font-size: 14px;
@@ -69,15 +69,17 @@
   letter-spacing: -0.02em;
   text-align: center;
   color: rgba(12, 12, 12, 0.4);
-  min-width: 263px;
+  max-width: 263px;
 
   text-align: center;
 }
+
 .rev-item.rev-item-second {
   display: none;
 }
-.rev-itemrev-item-third {
-  display: none;  
+
+.rev-item.rev-item-third {
+  display: none;
 }
 
 
@@ -87,111 +89,73 @@
   .reviews {
     width: 100%;
   }
+
   .reviews-content {
     /* .container */
     max-width: 768px;
     padding: 0 32px;
-  }  
+  }
+
   .reviews-title {
     font-weight: 600;
     font-size: 48px;
     line-height: 0.91667;
-  }  
+  }
+
   .rev-list {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
+    gap: 16px;
   }
+
   .rev-item {
     flex-wrap: wrap;
     flex-direction: row;
     max-width: 344px;
-    width: calc((100% - 16px) / 2);
+    padding: 32px 36px;
   }
-  .rev-item-second {
-    display: block;
-    /* flex-wrap: wrap;
-    flex-direction: row; */
-    margin-left: 16px;
-    /* width: calc((100% - 16px) / 2); */
 
-  }
-    
+  .rev-item.rev-item-second {
+    display: block;
+    }
+
   .rev-subtitle {
     font-size: 18px;
     line-height: 1.1;
-    
   }
+
   .rev-text {
-      max-width: 272px;
+    max-width: 272px;
   }
-    
 }
 
 /* desktop */
 
 @media screen and (min-width: 1280px) {
-    
   .reviews-content {
   }
   .container {
     max-width: 1280px;
     padding: 0 65px;
   }
-  .reviews-title {
-  }
-  .title {
-  }
-  .rev-list {
-  }
   
+  .rev-list {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
 
   .rev-item {
-    /* display: flex; */
-    flex-wrap: wrap;
-    flex-direction: row;
     max-width: 370px;
-
-    margin-left: 20px;
-    width: calc((100% - 20px) / 3);
   }
 
   .rev-item.rev-item-first,
   .rev-item.rev-item-second,
   .rev-item.rev-item-third {
     display: block;
-    
-    flex-wrap: wrap;
-    flex-direction: row;
-    /* margin-left: 20px; */
-    width: calc((100% - 20px) / 3);
   }
 
-  .rev-item.rev-item-second,
-  .rev-item.rev-item-third {
-   
-    margin-left: 20px;
-  }
-  /* .rev-item-third {
-    display: block;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin-left: 20px;
-    width: calc((100% - 20px) / 3);
-  } */
-
-  
-  .rev-list-wrap {
-  }
-  .team-member-photo {
-  }
-  .rev-subtitle {
-  }
   .rev-text {
     max-width: 298px;
-  }
-  .rev-item-second {
-    
-  }
- 
+  }  
 }
