--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,13 +11,13 @@
 .footer-section {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .footer-logo-soc {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .footer-logo-text {
@@ -27,7 +27,6 @@
   color: #fbfbfb;
 }
 .footer-section {
-  margin-bottom: 40px;
 }
 .footer-soc-list {
   display: flex;
@@ -48,6 +47,12 @@
 .footer-icon {
   fill: #fbfbfb;
   opacity: 0.8;
+  width: 18px;
+  height: 18px;
+}
+
+.footer-phone {
+  margin-bottom: 40px;
 }
 
 .footer-tel {
@@ -58,7 +63,6 @@
   text-align: center;
   color: #fbfbfb;
   padding: 14px 20px;
-  margin-bottom: 20px;
   border: 1px solid rgba(251, 251, 251, 0.2);
   border-radius: 16px;
   max-width: 152px;
@@ -102,12 +106,16 @@
   text-align: center;
   color: #fbfbfb;
 }
+
 .footer-address {
+  margin-left: auto;
+}
+
+.footer-address-text {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
   color: #fbfbfb;
-  margin-left: auto;
 }
 
 .footer-text-item {
@@ -148,21 +156,30 @@
   }
 
   .footer-section {
-    margin-bottom: 86px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    position: relative;
   }
 
   .footer-logo-soc {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 86px;
   }
+
   .footer-phone {
+    position: absolute;
+    right: 0;
+    margin-bottom: 0;
+  }
+
+  .footer-icon {
+    width: 20px;
+    height: 20px;
   }
 
   .footer-tel {
-    margin-left: auto;
     height: 48px;
     font-size: 14px;
     line-height: 1.28;
@@ -185,7 +202,9 @@
     padding-bottom: 28px;
   }
 
-  .footer-menu {
+  .footer-menu-item {
+    font-size: 14px;
+    line-height: 1.28;
   }
 
   .footer-menu-list {
@@ -194,8 +213,7 @@
     gap: 19px;
   }
 
-  .footer-address {
-    font-weight: 500;
+  .footer-address-text {
     font-size: 14px;
     line-height: 1.28;
   }
@@ -214,5 +232,48 @@
   .footer-link-text {
     font-size: 14px;
     line-height: 1.28;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    padding: 0 32px;
+  }
+
+  .footer-section {
+    flex-direction: row;
+  }
+
+  .footer-slogan {
+    width: 523px;
+    padding-left: 178px;
+    padding-right: 147px;
+    margin-bottom: 126px;
+  }
+
+  .footer-logo-soc {
+    margin-bottom: 0;
+  }
+
+  .footer-menu-address {
+    gap: 0;
+  }
+
+  .footer-menu-list {
+    gap: 40px;
+    width: 505px;
+  }
+
+  .footer-address {
+    margin-left: auto;
+    width: 162px;
+  }
+
+  .footer-text {
+    gap: 0;
+  }
+
+  .footer-link {
+    margin-left: auto;
   }
 }
