--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
               target="_blank"
               class="footer-soc-link"
             >
-              <svg class="footer-icon" width="18" height="18">
+              <svg class="footer-icon">
                 <use href="./img/icons.svg#icon-facebook"></use>
               </svg>
             </a>
@@ -21,7 +21,7 @@
               target="_blank"
               class="footer-soc-link"
             >
-              <svg class="footer-icon" width="18" height="18">
+              <svg class="footer-icon">
                 <use href="./img/icons.svg#icon-instagram"></use>
               </svg>
             </a>
@@ -32,21 +32,22 @@
               target="_blank"
               class="footer-soc-link"
             >
-              <svg class="footer-icon" width="18" height="18">
+              <svg class="footer-icon">
                 <use href="./img/icons.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
-      <a href="tel:+380684439426" class="footer-tel">+380 (68) 443-94-26</a>
-    </div>
-
-    <div class="footer-slogan">
-      <p class="footer-slogan-text">
-        Have the time of your life with our watches: where high-class
-        craftsmanship meets impeccable design
-      </p>
+      <div class="footer-phone">
+        <a href="tel:+380684439426" class="footer-tel">+380 (68) 443-94-26</a>
+      </div>
+      <div class="footer-slogan">
+        <p class="footer-slogan-text">
+          Have the time of your life with our watches: where high-class
+          craftsmanship meets impeccable design
+        </p>
+      </div>
     </div>
     <div class="footer-menu-address">
       <div class="footer-menu">
@@ -60,7 +61,9 @@
         </ul>
       </div>
       <div class="footer-address">
-        <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
+        <p class="footer-address-text">
+          1678 S. Pioneer Road Salt Lake City UT 84104
+        </p>
       </div>
     </div>
     <div class="footer-text">
