chage gap at the container-sale

--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -131,7 +131,6 @@
 }
 
 .item-text-tag {
-    /* font-family: Gilroy; */
     font-size: 12px;
     font-weight: 500;
     line-height: 16px;
@@ -142,7 +141,11 @@
 @media screen and (min-width: 768px) {
     .container-watch-img {
         flex-direction: row;
-        gap: 40px;
+        gap: 20px;
+    }
+
+    .container-sale {
+        gap: 40px; 
     }
 
     .small-watches-container {
