--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -6,7 +6,7 @@
         Choose <span class="span-advertisment">your story</span>, making every
         moment unique. Time is your style, and we reveal it.
       </p>
-      <button type="button" class="adv-btn">Contact Us</button>
+      <a href="#contact-us-section" class="adv-btn">Contact Us</a>
     </div>
   </div>
 </section>
