--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -56,7 +56,7 @@
   line-height: 1;
   letter-spacing: -0.02em;
   color: #fbfbfb;
-  margin-bottom: 28px;
+  margin-bottom: 43px;
 }
 
 .span-advertisment {
@@ -74,6 +74,7 @@
   width: 160px;
   height: 48px;
   background-color: transparent;
+  padding: 15px 43px 15px 44px;
 }
 
 @media screen and (max-width: 767px) {
@@ -95,7 +96,7 @@
     font-weight: 600;
     font-size: 48px;
     line-height: 0.92;
-    margin-bottom: 32px;
+    margin-bottom: 47px;
     width: 576px;
   }
 }
@@ -108,11 +109,15 @@
   .advertisement-wrap {
     display: flex;
     padding: 83px 80px 83px 80px;
-    gap: 140px;
+    justify-content: space-between;
   }
 
   .text-adv {
     width: 690px;
     margin-bottom: 0;
+  }
+
+  .adv-btn {
+    width: 162px;
   }
 }
